cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( DisplayImage DisplayImage.cpp )
add_executable( DisplayImage1 DisplayImage1.cpp)
add_executable( DI2 DI2.cpp)
add_executable( blend_prog blend_prog.cpp)
add_executable( cont_bright_prog cont_bright_prog.cpp)
add_executable( draw_shapes draw_shapes.cpp)
add_executable( rnd_prog rnd_prog.cpp)
add_executable( dft_prog dft_prog.cpp)
add_executable( file_prog file_prog.cpp)
add_executable( img_proc_smooth img_proc_smooth.cpp)
add_executable( erode_dilate_imgproc erode_dilate_imgproc.cpp)
add_executable( morph_trans_imgproc morph_trans_imgproc.cpp)
add_executable( img_pyr_imgproc img_pyr_imgproc.cpp)
add_executable( thresh_imgproc thresh_imgproc.cpp)
add_executable( filter2d_imgproc filter2d_imgproc.cpp)
add_executable( add_border_imgproc add_border_imgproc.cpp)
add_executable( sobel_imgproc sobel_imgproc.cpp)
add_executable( laplacian_imgproc laplacian_imgproc.cpp)
add_executable( canny_imgproc canny_imgproc.cpp)
add_executable( hough_imgproc hough_imgproc.cpp)
add_executable( houghcirc_imgproc houghcirc_imgproc.cpp)
add_executable( remap_imgproc remap_imgproc.cpp)
add_executable( affine_imgproc affine_imgproc.cpp)
add_executable( histeq_imgproc histeq_imgproc.cpp)
add_executable( histcalc_imgproc histcalc_imgproc.cpp)
add_executable( graytorgb_imgproc graytorgb_imgproc.cpp)
add_executable( contour_improc contour_improc.cpp)
add_executable( conhull_improc conhull_improc.cpp)
add_executable( bound_imgproc bound_imgproc.cpp)
add_executable( bounde_imgproc bounde_imgproc.cpp)
add_executable( moments_imgproc moments_imgproc.cpp)
add_executable( point_imgproc point_imgproc.cpp)
add_executable( gui_cv gui_cv.cpp)
add_executable( videocap_gui videocap_gui.cpp)
add_executable( video_cap video_cap.cpp)
add_executable( video_cap1 video_cap1.cpp)
add_executable( video_write video_write.cpp)
add_executable( feature2d1 feature2d1.cpp)
add_executable( flannimg flannimg.cpp)
add_executable( homography homography.cpp)

target_link_libraries( DisplayImage ${OpenCV_LIBS} )
target_link_libraries( DisplayImage1 ${OpenCV_LIBS} )
target_link_libraries( DI2 ${OpenCV_LIBS} )
target_link_libraries( blend_prog ${OpenCV_LIBS} )
target_link_libraries( cont_bright_prog ${OpenCV_LIBS} )
target_link_libraries( draw_shapes ${OpenCV_LIBS} )
target_link_libraries( rnd_prog ${OpenCV_LIBS} )
target_link_libraries( dft_prog ${OpenCV_LIBS} )
target_link_libraries( file_prog ${OpenCV_LIBS} )
target_link_libraries( img_proc_smooth ${OpenCV_LIBS} )
target_link_libraries( erode_dilate_imgproc ${OpenCV_LIBS} )
target_link_libraries( morph_trans_imgproc ${OpenCV_LIBS} )
target_link_libraries( img_pyr_imgproc ${OpenCV_LIBS} )
target_link_libraries( thresh_imgproc ${OpenCV_LIBS} )
target_link_libraries( filter2d_imgproc ${OpenCV_LIBS} )
target_link_libraries( add_border_imgproc ${OpenCV_LIBS} )
target_link_libraries( sobel_imgproc ${OpenCV_LIBS} )
target_link_libraries( laplacian_imgproc ${OpenCV_LIBS} )
target_link_libraries( canny_imgproc ${OpenCV_LIBS} )
target_link_libraries( hough_imgproc ${OpenCV_LIBS} )
target_link_libraries( houghcirc_imgproc ${OpenCV_LIBS} )
target_link_libraries( remap_imgproc ${OpenCV_LIBS} )
target_link_libraries( affine_imgproc ${OpenCV_LIBS} )
target_link_libraries( histeq_imgproc ${OpenCV_LIBS} )
target_link_libraries( histcalc_imgproc ${OpenCV_LIBS} )
target_link_libraries( graytorgb_imgproc ${OpenCV_LIBS} )
target_link_libraries( contour_improc ${OpenCV_LIBS} )
target_link_libraries( conhull_improc ${OpenCV_LIBS} )
target_link_libraries( bound_imgproc ${OpenCV_LIBS} )
target_link_libraries( bounde_imgproc ${OpenCV_LIBS} )
target_link_libraries( moments_imgproc ${OpenCV_LIBS} )
target_link_libraries( point_imgproc ${OpenCV_LIBS} )
target_link_libraries( gui_cv ${OpenCV_LIBS} )
target_link_libraries( videocap_gui ${OpenCV_LIBS} )
target_link_libraries( video_cap ${OpenCV_LIBS} )
target_link_libraries( video_cap1 ${OpenCV_LIBS} )
target_link_libraries( video_write ${OpenCV_LIBS} )
target_link_libraries( feature2d1 ${OpenCV_LIBS} )
target_link_libraries( flannimg ${OpenCV_LIBS} )
target_link_libraries( homography ${OpenCV_LIBS} )
